--- a/AzarKandidaV2/Views/Home/Index.cshtml
+++ b/AzarKandidaV2/Views/Home/Index.cshtml
@@ -1,31 +1,63 @@
-﻿@{
-    ViewBag.Title = "Home Page";
-}
+﻿
+<style>
+    * {
+        margin: 0;
+        padding: 0;
+    }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    .body {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .grid a {
+        display: flex;
+        overflow: hidden;
+    }
+
+        .grid a img {
+            width: 100%;
+        }
+</style>
+
+<div class="grid">
+    <a href=""><img src="~/Content/img/1.jpg" alt=""></a>
+    <a href=""><img src="~/Content/img/4.jpg" alt=""></a>
+    <a href=""><img src="~/Content/img/5.jpg" alt=""></a>
+    <a href=""><img src="~/Content/img/6.jpg" alt=""></a>
+    <a href=""><img src="~/Content/img/7.jpg" alt=""></a>
+    <a href=""><img src="~/Content/img/8.jpg" alt=""></a>
+    <a href=""><img src="~/Content/img/1.jpg" alt=""></a>
+    <a href=""><img src="~/Content/img/4.jpg" alt=""></a>
+    <a href=""><img src="~/Content/img/5.jpg" alt=""></a>
+    <a href=""><img src="~/Content/img/6.jpg" alt=""></a>
+    <a href=""><img src="~/Content/img/7.jpg" alt=""></a>
+    <a href=""><img src="~/Content/img/8.jpg" alt=""></a>
+    <a href=""><img src="~/Content/img/9.jpg" alt=""></a>
+    <a href=""><img src="~/Content/img/4.jpg" alt=""></a>
+    <a href=""><img src="~/Content/img/5.jpg" alt=""></a>
+    <a href=""><img src="~/Content/img/6.jpg" alt=""></a>
+    <a href=""><img src="~/Content/img/5.jpg" alt=""></a>
+    <a href=""><img src="~/Content/img/7.jpg" alt=""></a>
+    <a href=""><img src="~/Content/img/6.jpg" alt=""></a>
+    <a href=""><img src="~/Content/img/8.jpg" alt=""></a>
+    <a href=""><img src="~/Content/img/9.jpg" alt=""></a>
 </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+<script src="https://cdn.jsdelivr.net/npm/macy@2"></script>
+
+<script>
+        var macy = Macy({
+            container: '.grid',
+            trueOrder: false,
+            waitForImages: false,
+            margin: 24,
+            columns: 3,
+            breakAt: {
+                1600: 4,
+                1200: 3,
+                900: 2,
+                450: 1,
+            }
+        });
+</script>
