update home page

--- a/AzarKandidaV2/Areas/Admin/Views/User/Index.cshtml
+++ b/AzarKandidaV2/Areas/Admin/Views/User/Index.cshtml
@@ -14,7 +14,7 @@
                                 <input class="form-control form-control-sm" name="name" type="text" value="@ViewBag.name" placeholder="نام">
                             </div>
                             <div class="form-group mx-sm-1 mb-2">
-                                <input class="form-control form-control-sm" name="name" type="text" value="@ViewBag.link" placeholder="لینک">
+                                <input class="form-control form-control-sm" name="link" type="text" value="@ViewBag.link" placeholder="لینک">
                             </div>
                         </div>
                     </div>
