--- a/AzarKandidaV2/Views/Account/Index.cshtml
+++ b/AzarKandidaV2/Views/Account/Index.cshtml
@@ -6,25 +6,25 @@
 
 <div class="row">
     <div class="col-lg-6 col-md-8 col-sm- mx-auto mt-5">
-        <div class="card shadow-sm">
+        <form class="card shadow-sm" action="/Account/Index" method="post">
             <div class="card-body">
                 <h1 class="h4 card-title mb-4">
                     ورود
                 </h1>
                 <div class="mb-4">
                     <label for="exampleFormControlInput1" class="form-label">نام کاربری</label>
-                    <input type="text" class="form-control" id="username" placeholder="...">
+                    <input type="text" class="form-control" id="username" name="username" placeholder="..." required>
                     <span class="text-danger"></span>
                 </div>
                 <div class="mb-5">
                     <label for="exampleFormControlInput1" class="form-label">گذرواژه</label>
-                    <input type="password" class="form-control" id="password">
+                    <input type="password" class="form-control" id="password" name="password" required>
                     <span class="text-danger"></span>
                 </div>
             </div>
             <div class="bg-white card-footer p-3">
                 <button class="btn btn btn-primary btn-primary">ورود</button>
             </div>
-        </div>
+        </form>
     </div>
 </div>
