add image and update

--- a/AzarKandidaV2/Views/Home/Index.cshtml
+++ b/AzarKandidaV2/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
             <img src="~/Resources/Images/Thumb/@item.ImageUrl" loading="lazy" alt="@item.Text">
             <div class="overlay">
                 <label>
-                    این یک تست می باشد
+                   @item.Text
                 </label>
             </div>
         </a>
