--- a/AzarKandidaV2/Views/Shared/_Layout.cshtml
+++ b/AzarKandidaV2/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
                         درباره این وبسایت
                     </h2>
                     <p class="text-muted">
-                        وب سایت جامع تبلیغاتی نامزدهای انتخابات مجلس یازدهم شورای اسلامی با برند آذرکاندیدا تحت نظر هلدینگ ایده پرداز آروین تاو با هدف پایین آوردن میزان استفاده از کاغذ به عنوان تبلیغات و حفظ محیط زیست به صورت تخصصی و بدون وابستگی به هیچ جناح و حزب خاصی، به شکل جامع به معرفی نامزدهای انتخاباتی (استانهای آذربایجان شرقی، آذربایجان غربی و اردبیل) می پردازد تا ملت غیور آذربایجان بتوانند نامزد مورد نظر خود را بشناسند و مقایسه های لازم را انجام دهند و همچنین بهترین ها را انتخاب کنند. لازم به ذکر است که این سایت به صورت جامع فقط به موضوع تبلیغات و معرفی نامزدهای انتخاباتی مجلس یازدهم شورای اسلامی میپردازد و به هیچ عنوان موضوع های دیگر را تحت پوشش خود ندارد
+                        وب سایت جامع تبلیغاتی نامزدهای انتخابات شورای اسلامی با برند آذرکاندیدا تحت نظر شرکت ایده پرداز آروین تاو با هدف پایین آوردن میزان استفاده از کاغذ به عنوان تبلیغات و حفظ محیط زیست به صورت تخصصی و بدون وابستگی به هیچ جناح و حزب خاصی، به شکل جامع به معرفی نامزدهای انتخاباتی (تبریز) می پردازد تا ملت غیور آذربایجان بتوانند نامزد مورد نظر خود را بشناسند و مقایسه های لازم را انجام دهند و همچنین بهترین ها را انتخاب کنند. لازم به ذکر است که این سایت به صورت جامع فقط به موضوع تبلیغات و معرفی نامزدهای انتخاباتی  شورای اسلامی میپردازد و به هیچ عنوان موضوع های دیگر را تحت پوشش خود ندارد
                     </p>
                 </div>
             </div>
