--- a/AzarKandidaV2/Views/Shared/_Layout.cshtml
+++ b/AzarKandidaV2/Views/Shared/_Layout.cshtml
@@ -16,22 +16,20 @@
 
 </head>
 <body>
-    <nav class="navbar fixed-top navbar-expand-lg shadow navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="/">
-                <h1 class="title">آذرکاندیدا</h1>
-                <p class="subtitle">بولتن تبلیغات انتخابات</p>
-            </a>
-            <img src="~/Content/img/Men.png" alt="" class="men" width="64" height="64" />
-            <a class="logo" href="https://arvintavco.com">
-                <img src="~/Content/svg/Logo.svg" width="64" height="64" alt="" />
-            </a>
-        </div>
+    <nav class="navigation fixed-top shadow bg-light">
+        <a class="navbar-brand" href="/">
+            <h1 class="title">آذرکاندیدا</h1>
+            <p class="subtitle">بولتن تبلیغات انتخابات</p>
+        </a>
+        <img src="~/Content/img/Men.png" alt="" class="men" />
+        <a class="logo" href="https://arvintavco.com">
+            <img src="~/Content/svg/Logo.svg" alt="" />
+        </a>
     </nav>
 
     <div class="container-main container">
-        @RenderBody()
-    </div>
+            @RenderBody()
+        </div>
 
 
     <footer class="footer container-fluid">
@@ -46,21 +44,19 @@
                     </p>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-4 text-center">
+            <div class="footer-grid">
+                <div class="fcol">
                     <a href="">
-                        <img src="~/Content/img/Enamad.png" alt="" />
+                        <img src="~/Content/img/Enamad.png" class="m-auto" alt="" />
                     </a>
                 </div>
-                <div class="col-4 text-center">
-                    <div class="row">
-                        <a href="https://arvintavco.com" class="col text-decoration-none    ">
-                            <img src="~/Content/svg/Logo.svg" class=" text-center" width="128" height="128" />
-                            <p class="text-muted text-center text-decoration-none">طراحی و توسعه توسط آروین تاو</p>
-                        </a>
-                    </div>
+                <div class="fcol">
+                    <a href="https://arvintavco.com" class="fcol text-decoration-none m-auto">
+                        <img src="~/Content/svg/Logo.svg" class="m-auto text-center" width="128" height="128" />
+                        <p class="text-muted text-center text-decoration-none">طراحی و توسعه توسط آروین تاو</p>
+                    </a>
                 </div>
-                <div class="col-4 text-center">
+                <div class="fcol">
                     <ul class="footer-links">
                         <li>
                             <a href="tel: 04133371059">
