--- a/AzarKandidaV2/Views/Shared/_Layout.cshtml
+++ b/AzarKandidaV2/Views/Shared/_Layout.cshtml
@@ -18,8 +18,10 @@
 <body>
     <nav class="navigation fixed-top shadow bg-light">
         <a class="navbar-brand" href="/">
-            <h1 class="title">آذرکاندیدا</h1>
-            <p class="subtitle">بولتن تبلیغات انتخابات</p>
+            <h1 class="title">
+                <img src="~/Content/img/Untitled-1.svg" />
+            </h1>
+            <p class="subtitle">تحولی نوین در انتخابات</p>
         </a>
         <img src="~/Content/img/Men.png" alt="" class="men" />
         <a class="logo" href="https://arvintavco.com">
@@ -28,8 +30,8 @@
     </nav>
 
     <div class="container-main container">
-            @RenderBody()
-        </div>
+        @RenderBody()
+    </div>
 
 
     <footer class="footer container-fluid">
@@ -40,14 +42,15 @@
                         درباره این وبسایت
                     </h2>
                     <p class="text-muted">
-                        وب سایت جامع تبلیغاتی نامزدهای انتخابات شورای اسلامی با برند آذرکاندیدا تحت نظر شرکت ایده پرداز آروین تاو با هدف پایین آوردن میزان استفاده از کاغذ به عنوان تبلیغات و حفظ محیط زیست به صورت تخصصی و بدون وابستگی به هیچ جناح و حزب خاصی، به شکل جامع به معرفی نامزدهای انتخاباتی (تبریز) می پردازد تا ملت غیور آذربایجان بتوانند نامزد مورد نظر خود را بشناسند و مقایسه های لازم را انجام دهند و همچنین بهترین ها را انتخاب کنند. لازم به ذکر است که این سایت به صورت جامع فقط به موضوع تبلیغات و معرفی نامزدهای انتخاباتی  شورای اسلامی میپردازد و به هیچ عنوان موضوع های دیگر را تحت پوشش خود ندارد
+                        وب سایت جامع تبلیغاتی نامزدهای انتخابات شورای اسلامی شهر با برند آذرکاندیدا تحت نظر شرکت ایده پرداز آروین تاو با هدف پایین آوردن میزان استفاده از کاغذ به عنوان تبلیغات و حفظ محیط زیست به صورت تخصصی و بدون وابستگی به هیچ جناح و حزب خاصی، به شکل جامع به معرفی نامزدهای انتخاباتی (تبریز) می پردازد تا ملت غیور آذربایجان بتوانند نامزد مورد نظر خود را بشناسند و مقایسه های لازم را انجام دهند و همچنین بهترین ها را انتخاب کنند. لازم به ذکر است که این سایت به صورت جامع فقط به موضوع تبلیغات و معرفی نامزدهای انتخاباتی شورای اسلامی شهر میپردازد و به هیچ عنوان موضوع های دیگر را تحت پوشش خود ندارد.
                     </p>
                 </div>
             </div>
             <div class="footer-grid">
                 <div class="fcol">
-                    <a href="">
-                        <img src="~/Content/img/Enamad.png" class="m-auto" alt="" />
+                    <a href="" class="fcol text-decoration-none m-auto">
+                        <img src="~/Content/img/Untitled-1.svg" width="164" height="72" class="m-auto text-center" />
+                        <p class="subtitle text-decoration-none" style="color:#2B2E83">تحولی نوین در انتخابات</p>
                     </a>
                 </div>
                 <div class="fcol">
