--- a/AzarKandidaV2/Content/css/Global.css
+++ b/AzarKandidaV2/Content/css/Global.css
@@ -75,7 +75,7 @@ backdrop-filter: saturate(80%);
   padding: 0; }
 
 .navigation {
-  height: 74px;
+  height: 100px;
   border-bottom: 1px solid #dadada;
   background-color: #fff !important;
   padding: 12px;
@@ -86,33 +86,37 @@ backdrop-filter: saturate(80%);
   -webkit-align-items: stretch;
   align-items: stretch; }
   .navigation .navbar-brand {
-    display: block; }
+    display: block;
+    display: flex;
+    flex-direction: column; }
     .navigation .navbar-brand .title {
-      font-size: 1.1em;
-      color: #333;
       margin-bottom: 0; }
+      .navigation .navbar-brand .title img {
+        height: 42px; }
     .navigation .navbar-brand .subtitle {
       margin-top: 4px;
       margin-bottom: 0;
-      font-size: .6em;
-      color: #666; }
+      font-size: .7em;
+      color: #2B2E83;
+      height: 12px; }
   .navigation .men {
     -moz-border-radius: 6px 6px 6px 6px;
     -webkit-border-radius: 6px 6px 6px 6px;
     border-radius: 6px 6px 6px 6px;
-    border: 1px solid #eee; }
+    border: 1px solid #eee;
+    margin: -5px; }
   @media only screen and (max-width: 312px) {
     .navigation .men {
       display: none; } }
   .navigation .logo {
+    height: auto;
     display: block; }
     .navigation .logo img {
-      margin: -4px;
-      width: 66px;
-      height: 66px; }
+      height: 100%;
+      width: auto; }
 
 .container-main {
-  margin-top: calc(74px + 24px); }
+  margin-top: calc(100px + 24px); }
 
 .footer .footer-grid {
   display: grid;
